	PR middle-end/85956 	PR lto/88733 	* tree-inline.h (struct copy_body_data): Add adjust_array_error_bounds 	field. 	* tree-inline.c (remap_type_1): Formatting fix.  If TYPE_MAX_VALUE of 	ARRAY_TYPE's TYPE_DOMAIN is newly error_mark_node, replace it with 	a dummy "omp dummy var" variable if id->adjust_array_error_bounds. 	* omp-low.c (new_omp_context): Set cb.adjust_array_error_bounds. fortran/ 	* trans-openmp.c: Include attribs.h. 	(gfc_walk_alloc_comps, gfc_omp_clause_linear_ctor): Handle 	VAR_DECL max bound with "omp dummy var" attribute like NULL or 	error_mark_node - recompute number of elts independently. testsuite/ 	* c-c++-common/gomp/pr85956.c: New test. 	* g++.dg/gomp/pr88733.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@267858 138bc75d-0d04-0410-961f-82ee72b054a4